--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.json filter=lfs diff=lfs merge=lfs -text
+OrionRebuildWix-clean/server/seed-data/driving-forces.json filter=lfs diff=lfs merge=lfs -text
+server/seed-data/driving-forces.json filter=lfs diff=lfs merge=lfs -text
